--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
 		"Other"
 	],
 	"activationEvents": [
-		"onCommand:pw.saveFile"
+		"onCommand:pw.saveFile",
+		"onCommand:pw.openFile"
 	],
 	"main": "./out/infrastructure/extension.js",
 	"contributes": {
@@ -18,6 +19,10 @@
 			{
 				"command": "pw.saveFile",
 				"title": "Proletarian Wizard: Save File"
+			},
+			{
+				"command": "pw.openFile",
+				"title": "Proletarian Wizard: Open File"
 			}
 		]
 	},
