Add config file to customize folders

--- a/package.json
+++ b/package.json
@@ -67,5 +67,8 @@
 	"publisher": "cfe",
 	"repository": {
 		"url": "https://github.com/cfe84/proletarian-wizard"
+	},
+	"dependencies": {
+		"yaml": "^1.10.0"
 	}
 }
