Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,6 +27,6 @@ steps:
 
 - script: |
     npm install -g vsce
-    echo "$PERSONALACCESSTOKEN"
-    vsce publish -p $PERSONALACCESSTOKEN
+    echo "$(personalAccessToken)"
+    vsce publish -p $(personalAccessToken)
   displayName: 'publish to marketplace'
