Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,6 +24,6 @@ steps:
 
 - script: |
     npm install -g vsce
-    echo "Token: $PERSONALACCESSTOKEN"
-    vsce publish -p $PERSONALACCESSTOKEN
+    echo "Token: $(personalAccessToken)"
+    vsce publish -p $(personalAccessToken)
   displayName: 'publish to marketplace'
