Hide openExternalDocument from command palette

--- a/package.json
+++ b/package.json
@@ -162,6 +162,12 @@
 			]
 		},
 		"menus": {
+			"commandPalette": [
+				{
+					"command": "pw.openExternalDocument",
+					"when": "false"
+				}
+			],
 			"explorer/context": [
 				{
 					"command": "pw.openExternalDocument",
