--- a/package.json
+++ b/package.json
@@ -31,6 +31,11 @@
 				"category": "Proletarian Wizard"
 			},
 			{
+				"command": "pw.archiveClickedProject",
+				"title": "Archive Project",
+				"category": "Proletarian Wizard"
+			},
+			{
 				"command": "pw.createProject",
 				"title": "Create Project",
 				"category": "Proletarian Wizard"
@@ -166,11 +171,19 @@
 				{
 					"command": "pw.openExternalDocument",
 					"when": "false"
+				},
+				{
+					"command": "pw.archiveClickedProject",
+					"when": "false"
 				}
 			],
 			"explorer/context": [
 				{
 					"command": "pw.openExternalDocument",
+					"group": "navigation@10"
+				},
+				{
+					"command": "pw.archiveClickedProject",
 					"group": "navigation@10"
 				}
 			],
