--- a/package.json
+++ b/package.json
@@ -253,7 +253,9 @@
 		"url": "https://github.com/cfe84/proletarian-wizard"
 	},
 	"dependencies": {
+		"chrono-node": "^2.2.6",
 		"luxon": "^1.26.0",
+		"moment": "^2.29.1",
 		"yaml": "^1.10.0"
 	},
 	"icon": "img/wizard.png",
